added about and services

--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
 
 
     <footer>
-        <p>Cjpesco Web Design, Copyright &copy; 2019</p>
+        <p>CJPesco Web Design, Copyright &copy; 2019</p>
     </footer>
 
 
